--- a/EdanSaediStudentForm/EditForm.resx
+++ b/EdanSaediStudentForm/EditForm.resx
@@ -117,4 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="addEditButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABlSURBVEhL7ZexCsAwCAUVHPz/H7YIoUPrYF5ISuEdHAED
+        3pApEgAicuvuYzrHcjhFYLgFwwgMt2AY4buwqr4W7dbM8qwvD1gOT1gO9zveeornEgSGWzCMwHALhhH+
+        Fc6P2lo44gI7tGV1IXdFpQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
