--- a/EdanSaediStudentForm/EditForm.resx
+++ b/EdanSaediStudentForm/EditForm.resx
@@ -129,4 +129,20 @@
         Fc6P2lo44gI7tGV1IXdFpQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="MoveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAdCAYAAAC9pNwMAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAI+SURBVEhLtdZNiE5RHMfxx+uCwmKIwoI1eQlZeNtaycLO
+        xsvIZpKFmpCSKM0Cs5lIskBhIUqEplFMKaRJspAoDcl75HX4fuv51+10xzzPfe791afbnM7c/3POPfec
+        Wysxk3EMXzGIbRiLSjMOFv2bWI9RqCzT8RBp4R5UOmqnuQ9p4YMYgzQt/5i9OIV9OIFviKKvsBB5eVe/
+        Fko7fiMKfcJdnMNRLEGaifD/7F8oS/EeUTT8xGXMRmQROnABj+Gs3EfTmQCnMS2qmAGn8lb9+gffcQUb
+        MQ2OvKn4avQjLRg+Yxeu4xmc8lVIc69+bSgWPY68glkfkD5f3/M2zMU82K/h+JyyiynrAbYgHsFrOFpX
+        /FXchn2e4yPs01CW4wuyxUI34r2cgSewfah+Da56F9gmZBffsHFzeIHsTfQG65CXs3iJ89iKOWg6m5EW
+        1Q5UmpvIK3wNU1BZotAlPMr8rRWoJGsRRbbD18HNINrcpSo59k7CAi4U3z/js43Cmo/S8xTe3O0u4mZw
+        A1G4F6VmMd7iFzbYkIkbv584UXwZSsseWNTiaUbjMKLwfpQSP9RipzpgQ06cBY84F5snTuHE6twJz1WL
+        XsQkpHHE7sX2OWJDq9kNb+YoXL0upLzMRLzTbqmF42g74Y0GsBL/y2rY10/aluJIPcq6MNI26I/0s9XC
+        C2woGj9BvYnnZiNx+l0DpzHehqK5AwvL76ThnmtkDezrI2lp15oKp8wt0U1jFkbKGXiw/8AhNHlK1Wr/
+        AHLczxVCeIPdAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
